[package]
name = "blockops"
version = "0.1.0"
edition = "2021"

[dependencies]
alloy = { version = "1.0.16", features = ["full"] }
clap = { version = "4.5.40", features = ["cargo"] }
dotenv = "0.15.0"
tokio = { version = "1.45.1", features = ["full"] }
regex = "1.10.2"
hex = "0.4.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json"] }
termimad = "0.24"
inquire = "0.7.5"
